# COMP10050-Software-Engineering-Project-1

./: README.md
assignment1/: CMakeLists.txt  COMP10050_assignment1.docx  find_anagrams.c  find_anagrams.h  input.c  input.h  input.txt  main.c  missing_anagrams.c  missing_anagrams.h  output.txt  sort.c  sort.h
assignment2/: CMakeLists.txt  check.c  check.h  game_init.c  game_init.h  input_output.c  input_output.h  main.c  move.c  move.h
assignment3/: CMakeLists.txt  avg_and_max.c  avg_and_max.h  main.c
